2018-07-12  Petasis George  <petasis@iit.demokritos.gr>
	* macosx/macdnd.m: Temporarily disabled the new drag source code for
	macOS 10.7+, as it does not seem to work in simple tests.

2018-07-12  Petasis George  <petasis@iit.demokritos.gr>
	* macosx/macdnd.m: Merged pull request #4:
	* CMakeLists.txt:  Added compatibility for later OS X versions.
	* configure.ac:    https://github.com/petasis/tkdnd/pull/4
	Actually this pull request resolved the deprecation of 
	"dragImage:at:offset:event:pasteboard:source:slideBack:" I failed to
	address in the previous update of macosx/macdnd.m.

	* win/Makefile: Merged pull request #5: Updated Windows version number.
	https://github.com/petasis/tkdnd/pull/5

	* demos/dndSpy.tcl: Merged pull request #10: Added executable flag to
	demo with shebang line.
	https://github.com/petasis/tkdnd/pull/10

	* Changelog: Merged pull request #15:
	https://github.com/petasis/tkdnd/pull/15

2018-07-11  Petasis George  <petasis@iit.demokritos.gr>
	* tcl-conf: Added more checks, needed for macOS.

	* macosx/macdnd.m: macOS 10.7/10.12/10.13 deprecated some definitions (
	NSDragPboard, NSLeftMouseDragged, NSLeftMouseDownMask) and some
	functions (convertScreenToBase) we use. Alternatives have been used.
	"dragImage:at:offset:event:pasteboard:source:slideBack:" is also
	deprecated in 10.7, but is more difficult to be replaced.

2018-06-29  Petasis George  <petasis@iit.demokritos.gr>
	* tcl-conf: Added a quick check to locate tclConfig.sh & tkConfig.sh,
	if they have been placed in non-standard locations withing the Tcl
	installtion directory. Bug #18
	(https://github.com/petasis/tkdnd/issues/18).

2018-06-25  Petasis George  <petasis@iit.demokritos.gr>
	* Makefile.in: Updated to latest Makefile.in from Tcl sample extension.

	* tcl-conf: Convert path returned by [info library] into an absolute
	path.

2018-06-25  Petasis George  <petasis@iit.demokritos.gr>
	* configure: Regenerated with "autoconf -i".
